fixing some mistakes

--- a/DataIO/Makefile
+++ b/DataIO/Makefile
@@ -8,12 +8,12 @@ OBJ = $(patsubst src/%.cpp, obj/%.o, ${SRC})
 
 lib/libdataio.so : ${OBJ} ${DEPS}
 	g++ --shared -o $@ $^ ${ROOT_CONFIG} ${FLAGS}
-	$(shell cp lib/libdataio ../HistogramGui/)
+	
 obj/%.o : src/%.cpp
 	g++ -o $@ -c $^ ${FLAGS} ${IDIR} ${ROOT_CONFIG}
 	
-ParseTree: ParseTree.cpp HistoConfig.o
-	g++ -o $@ $^ -Wl,--no-as-needed  ${ROOT_CONFIG} -lboost_program_options
+ParseTree: ParseTree.cpp
+	g++ -o $@ $^ -Wl,--no-as-needed -I./include -L./lib  ${ROOT_CONFIG} -ldataio -lboost_program_options
 	
 %.o : %.cpp
 	g++ -o $@ -c $^
