--- a/DataIO/Makefile
+++ b/DataIO/Makefile
@@ -1,4 +1,4 @@
-ROOT_CONFIG = `../root/bin/root-config --cflags --glibs`
+ROOT_CONFIG = `root-config --cflags --glibs`
 FLAGS = -std=c++11 -fPIC
 IDIR = -Iinclude
 	
@@ -7,10 +7,10 @@ DEPS = $(wildcard include/*.h)
 OBJ = $(patsubst src/%.cpp, obj/%.o, ${SRC})
 
 lib/libdataio.so : ${OBJ} ${DEPS}
-	g++ --shared -o $@ $^ ${ROOT_CONFIG} ${FLAGS}
+	g++ --shared -o $@ $^ ${FLAGS}
 	
 obj/%.o : src/%.cpp
-	g++ -o $@ -c $^ ${FLAGS} ${IDIR} ${ROOT_CONFIG}
+	g++ -o $@ -c $^ ${FLAGS} ${IDIR}
 	
 ParseTree: ParseTree.cpp
 	g++ -o $@ $^ -Wl,--no-as-needed -I./include -L./lib  ${ROOT_CONFIG} -ldataio -lboost_program_options
